demo-application/Gateway&Route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/service-type: LoadBalancer
  addresses:
  - value: "192.168.1.50" # MUST be an IP from your CiliumLoadBalancerIPPool
    type: IPAddress
  listeners:
  - protocol: HTTP
    port: 8080
    name: web-gw
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
spec:
  parentRefs:
  - name: frontend-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: service-nginx
      port: 80
      weight: 10
    - name: service-nginx2
      port: 80
      weight: 90
